--- a/app/www/static/less/styles.less
+++ b/app/www/static/less/styles.less
@@ -262,3 +262,57 @@ nav {
   margin-left: 30%;
   width: 40%;
 }
+
+
+// Professor View
+
+
+.professor-list {
+  padding: 50px;
+}
+
+
+// ProfessorProfile
+
+
+.professor {
+  padding: 50px;
+}
+
+.professor-info {
+  border-radius: 1px;
+  border: solid 1px @medium-grey;
+  background-color: white;
+}
+
+.professor-name {
+  padding: 20px;
+  color: @grey-text;
+}
+
+.professor-pic {
+  width: 100%;
+}
+
+.professor-reviews {
+  padding: 20px;
+  border-radius: 1px;
+  border: solid 1px @medium-grey;
+  background-color: white;
+}
+
+.class-pill {
+  margin: 5px;
+  white-space: nowrap;
+  border-radius: 100px;
+  padding: 0 10px;
+}
+
+.pill-container {
+  flex-wrap: wrap;
+}
+
+.classes-header {
+  padding: 10px;
+  color: #6c757d;
+}
