Added professor & class pages

--- a/app/www/static/css/styles.css
+++ b/app/www/static/css/styles.css
@@ -150,6 +150,7 @@ nav {
   border-radius: 1px;
   border: solid 1px #E6E6E6;
   padding: 20px;
+  margin-bottom: 20px;
 }
 .statpanel:hover {
   cursor: pointer;
@@ -208,6 +209,12 @@ nav {
   font-weight: 100;
   font-size: 0.85em;
   color: #a6a6a6;
+}
+@media (max-width: 480px) {
+  .review-timestamp {
+    text-align: left;
+    margin-bottom: 20px;
+  }
 }
 .review-content-header {
   margin-right: 0;
@@ -269,11 +276,22 @@ nav {
   border: solid 1px #E6E6E6;
   background-color: white;
 }
-.class-pill {
+@media (max-width: 991px) {
+  .professor-reviews {
+    margin-top: 20px;
+  }
+}
+.text-pill {
   margin: 5px;
   white-space: nowrap;
   border-radius: 100px;
   padding: 0 10px;
+  cursor: pointer;
+}
+.text-pill:hover {
+  margin-top: 0;
+  margin-bottom: 10px;
+  transition: all 0.3s;
 }
 .pill-container {
   flex-wrap: wrap;
@@ -281,4 +299,39 @@ nav {
 .classes-header {
   padding: 10px;
   color: #6c757d;
+}
+.classes-list {
+  padding: 50px;
+}
+.class-profile {
+  padding: 50px;
+}
+.class-info {
+  padding: 20px;
+  border-radius: 1px;
+  border: solid 1px #E6E6E6;
+  background-color: white;
+}
+.class-body {
+  border-radius: 1px;
+  border-top: solid 1px #E6E6E6;
+  border-bottom: solid 1px #E6E6E6;
+  padding: 30px;
+}
+.class-name {
+  margin-bottom: 15px;
+}
+.class-reviews {
+  margin-top: 15px;
+}
+.semester-dropdown {
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+.avg-grade {
+  text-align: center;
+  margin-top: 30px;
+}
+.dist-title {
+  text-align: center;
 }
