--- a/app/www/static/less/styles.less
+++ b/app/www/static/less/styles.less
@@ -362,6 +362,10 @@ nav {
   border-top: solid 1px @medium-grey;
   border-bottom: solid 1px @medium-grey;
   padding: 30px;
+
+  @media @phone-down {
+    padding: 20px 0 0 0;
+  }
 }
 
 .class-name {
