--- a/app/www/static/css/globals.css
+++ b/app/www/static/css/globals.css
@@ -33,3 +33,115 @@
   color: #6f7609;
   background-color: #e9f259;
 }
+.panel {
+  border-radius: 1px;
+  border: solid 1px #E6E6E6;
+  background-color: white;
+}
+.selectbox {
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: hsl(0, 0%, 100%);
+  border-color: hsl(0, 0%, 80%);
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  cursor: default;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  height: 38px;
+  outline: 0 !important;
+  position: relative;
+  -webkit-transition: all 100ms;
+  transition: all 100ms;
+  box-sizing: border-box;
+  user-select: none;
+}
+.selectbox.toggled {
+  border-color: #2684FF;
+  box-shadow: 0 0 0 1px #2684FF;
+}
+.selectbox.toggled:hover {
+  border-color: #2684FF;
+}
+.selectbox:hover {
+  border-color: hsl(0, 0%, 70%);
+}
+.select-inner {
+  color: hsl(0, 0%, 50%);
+  margin-left: 2px;
+  margin-right: 2px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  box-sizing: border-box;
+  padding: 2px 8px;
+}
+.select-drop {
+  display: flex;
+  flex-shrink: 0;
+  align-self: stretch;
+  align-items: center;
+  width: 36px;
+  height: 36px;
+}
+.select-bar {
+  background-color: hsl(0, 0%, 80%);
+  margin: 8px 0;
+  width: 1px;
+  align-self: stretch;
+}
+.drop-bar {
+  z-index: 10;
+  color: hsl(0, 0%, 80%);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 8px;
+  -webkit-transition: color 150ms;
+  transition: color 150ms;
+  box-sizing: border-box;
+}
+.range-container {
+  text-align: center;
+  position: absolute;
+  width: 93%;
+  padding: 20px 40px 40px 40px;
+  z-index: 50;
+  left: 10px;
+  margin-top: 7px;
+  border-radius: 4px;
+  border: solid 1px #E6E6E6;
+  background-color: white;
+  user-select: none;
+}
+.range-label {
+  margin-bottom: 15px;
+}
+.range-buttons {
+  position: relative;
+  top: 25px;
+  display: flex;
+  justify-content: space-between;
+}
+.btn-round {
+  border-radius: 3px;
+  color: #6c757d;
+}
+.btn-round:hover {
+  background-color: #E6E6E6;
+}
