--- a/app/www/static/css/styles.css
+++ b/app/www/static/css/styles.css
@@ -57,6 +57,124 @@ button:focus {
   color: #6f7609;
   background-color: #e9f259;
 }
+.panel,
+.statpanel,
+.recent-reviews,
+.professor-info,
+.professor-reviews,
+.filter-row,
+.class-info {
+  border-radius: 1px;
+  border: solid 1px #E6E6E6;
+  background-color: white;
+}
+.selectbox {
+  -webkit-align-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: hsl(0, 0%, 100%);
+  border-color: hsl(0, 0%, 80%);
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  cursor: default;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  height: 38px;
+  outline: 0 !important;
+  position: relative;
+  -webkit-transition: all 100ms;
+  transition: all 100ms;
+  box-sizing: border-box;
+  user-select: none;
+}
+.selectbox.toggled {
+  border-color: #2684FF;
+  box-shadow: 0 0 0 1px #2684FF;
+}
+.selectbox.toggled:hover {
+  border-color: #2684FF;
+}
+.selectbox:hover {
+  border-color: hsl(0, 0%, 70%);
+}
+.select-inner {
+  color: hsl(0, 0%, 50%);
+  margin-left: 2px;
+  margin-right: 2px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  box-sizing: border-box;
+  padding: 2px 8px;
+}
+.select-drop {
+  display: flex;
+  flex-shrink: 0;
+  align-self: stretch;
+  align-items: center;
+  width: 36px;
+  height: 36px;
+}
+.select-bar {
+  background-color: hsl(0, 0%, 80%);
+  margin: 8px 0;
+  width: 1px;
+  align-self: stretch;
+}
+.drop-bar {
+  z-index: 10;
+  color: hsl(0, 0%, 80%);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 8px;
+  -webkit-transition: color 150ms;
+  transition: color 150ms;
+  box-sizing: border-box;
+}
+.range-container {
+  text-align: center;
+  position: absolute;
+  width: 93%;
+  padding: 20px 40px 40px 40px;
+  z-index: 50;
+  left: 10px;
+  margin-top: 7px;
+  border-radius: 4px;
+  border: solid 1px #E6E6E6;
+  background-color: white;
+  user-select: none;
+}
+.range-label {
+  margin-bottom: 15px;
+}
+.range-buttons {
+  position: relative;
+  top: 25px;
+  display: flex;
+  justify-content: space-between;
+}
+.btn-round {
+  border-radius: 3px;
+  color: #6c757d;
+}
+.btn-round:hover {
+  background-color: #E6E6E6;
+}
 nav {
   background-color: white;
   border-bottom: solid 1px #E6E6E6;
@@ -146,9 +264,6 @@ nav {
   color: #6c757d;
 }
 .statpanel {
-  background-color: white;
-  border-radius: 1px;
-  border: solid 1px #E6E6E6;
   padding: 20px;
   margin-bottom: 20px;
 }
@@ -174,9 +289,6 @@ nav {
 }
 .recent-reviews {
   margin-top: 20px;
-  background-color: white;
-  border-radius: 1px;
-  border: solid 1px #E6E6E6;
   padding: 20px;
 }
 .recent-title {
@@ -258,11 +370,6 @@ nav {
 .professor {
   padding: 50px;
 }
-.professor-info {
-  border-radius: 1px;
-  border: solid 1px #E6E6E6;
-  background-color: white;
-}
 .professor-name {
   padding: 20px;
   color: #6c757d;
@@ -272,9 +379,6 @@ nav {
 }
 .professor-reviews {
   padding: 20px;
-  border-radius: 1px;
-  border: solid 1px #E6E6E6;
-  background-color: white;
 }
 @media (max-width: 991px) {
   .professor-reviews {
@@ -303,14 +407,15 @@ nav {
 .classes-list {
   padding: 50px;
 }
+.filter-row {
+  padding: 20px;
+  margin-bottom: 20px;
+}
 .class-profile {
   padding: 50px;
 }
 .class-info {
   padding: 20px;
-  border-radius: 1px;
-  border: solid 1px #E6E6E6;
-  background-color: white;
 }
 .class-body {
   border-radius: 1px;
