--- a/app/www/static/css/globals.css
+++ b/app/www/static/css/globals.css
@@ -38,6 +38,9 @@
   border: solid 1px #E6E6E6;
   background-color: white;
 }
+.filter {
+  margin-bottom: 10px;
+}
 .selectbox {
   -webkit-align-items: center;
   -webkit-box-align: center;
